--- a/myproject/textbooks/templates/base.html
+++ b/myproject/textbooks/templates/base.html
@@ -1,1 +1,13 @@
-<h1>home page</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Concordia Book Module</title>
+</head>
+<body>
+    <h1>Concordia Book Market</h1>
+    {% block content %}
+    {% endblock %}
+</body>
+</html>
