--- a/myproject/textbooks/templates/base.html
+++ b/myproject/textbooks/templates/base.html
@@ -6,7 +6,7 @@
     <title>Concordia Book Module</title>
 </head>
 <body>
-    <h1>Concordia Book Market</h1>
+    <h1>Hello, {{ username }}! Welcome to Concordia Book Market</h1>
     {% block content %}
     {% endblock %}
 </body>
