--- a/myproject/textbooks/templates/textbooks/filter_form.html
+++ b/myproject/textbooks/templates/textbooks/filter_form.html
@@ -1,4 +1,4 @@
-<h2>Search Textbook</h2>
+<h2>Filter By</h2>
 <form method="POST">
     {% csrf_token %}
     <input type="text" name="book_title" placeholder="Enter book name">
