--- a/myproject/textbooks/templates/textbooks/filter_form.html
+++ b/myproject/textbooks/templates/textbooks/filter_form.html
@@ -2,5 +2,5 @@
 <form method="POST">
     {% csrf_token %}
     <input type="text" name="book_title" placeholder="Enter book name">
-    <button type="submit">Add</button>
+    <button class="btn btn-outline-primary" type="submit">Filter</button>
 </form>
