--- a/myproject/textbooks/templates/textbooks/list.html
+++ b/myproject/textbooks/templates/textbooks/list.html
@@ -8,15 +8,17 @@
         <div class="d-flex justify-content-between">
             <h3 class="card-title mb-1">{{ textbook.title }}</h3>
         </div>
-        <p class="mb-1 text-wrap">Some placeholder content in a paragraph.</p>
-        <p class="mb-1 text-wrap">Author: {{ textbook.author }}</p>
-        <p class="mb-1 text-wrap">Year: {{ textbook.year }} {% if textbook.edition %}· Edition: {{ textbook.edition }}{% endif %}</p>
-        <p class="mb-1 text-wrap">Course code: {{ textbook.course_code }}</p>
-        <p class="mb-1 text-wrap">Condition: {{ textbook.condition }}</p>
-        <p class="mb-1 text-wrap">Availability: <span class="{% if textbook.availability_status %}text-success{% else %}text-danger{% endif %}">{% if textbook.availability_status %}Available{% else %}Not available{% endif %}</span></p>
+        <div>
+             <p class="mb-1 text-wrap">Author: {{ textbook.author }}</p>
+            <p class="mb-1 text-wrap">Year: {{ textbook.year }} {% if textbook.edition %}· Edition: {{ textbook.edition }}{% endif %}</p>
+            <p class="mb-1 text-wrap">Course code: {{ textbook.course_code }}</p>
+            <p class="mb-1 text-wrap">Condition: {{ textbook.condition }}</p>
+            <p class="mb-1 text-wrap">Availability: <span class="{% if textbook.availability_status %}text-success{% else %}text-danger{% endif %}">{% if textbook.availability_status %}Available{% else %}Not available{% endif %}</span></p>
+        </div>
+        {% if textbook.availability_status %} <button type="button" class="btn btn-outline-primary">Exchange</button>{% else %}{% endif %}
+        <br />
     </div>
     {% endfor %}
-
 </div>
 
 {% else %}
