--- a/myproject/textbooks/templates/textbooks/list.html
+++ b/myproject/textbooks/templates/textbooks/list.html
@@ -22,9 +22,8 @@
 </div>
 
 {% else %}
-<div>
-    <p>
-        No textbooks found.
-    </p>
+{% load static %}
+<div class="text-center">
+    <h5 class="mt-3">No textbooks found.</h5>
 </div>
 {% endif %}
